--- a/Django-CRM/accounts/templates/accounts/customer.html
+++ b/Django-CRM/accounts/templates/accounts/customer.html
@@ -7,7 +7,7 @@
             <div class="card card-body">
                 <h5>Customers: </h5>
                 <hr>
-                <a class="btn btn-outline-info btn-sm btn-block " href="">Update</a>
+                <a class="btn btn-outline-info btn-sm btn-block " href="{% url 'updateorder' customer.id%}">Update</a>
                 <a class="btn btn-outline-danger btn-sm  btn-block"   href="">Delete</a>
             </div>
         </div>
