--- a/Django-CRM/accounts/templates/accounts/dashboard.html
+++ b/Django-CRM/accounts/templates/accounts/dashboard.html
@@ -15,12 +15,14 @@
                 <a class="btn btn-primary btn-block btn-sm" href="">Create Customer</a>
                 <table class="table table-sm">
                     <tr>
+                        <th></th>
                         <th>Customer</th>
                         <th>Phone</th>
                     </tr>
                    
                         {% for i in customers %}
                             <tr>
+                                <td><a class="btn btn-sm btn-info" href="{% url 'customer' i.id %}" >View</a></td>
                                 <td>{{i.name}}</td>
                                  <td>{{i.phone}}</td>
                             </tr>
@@ -33,7 +35,7 @@
         <div class="col-md-7">
             <i><h4>Last 5 Orders</h4></i>
                 <div class="card card-body">
-                    <a class="btn btn-primary btn-block btn-sm" href="">Create Order</a>
+                    <a class="btn btn-primary btn-block btn-sm" href="{% url 'createupdate' %}">Create Order</a>
                     <table class="table table-sm">
                         <tr>
                             <th>Customer</th>
@@ -50,8 +52,8 @@
                                 <td>{{i.product}}</td>
                                 <td>{{i.date_created}}</td>
                                 <td>{{i.status}}</td>
-                                <td><a href ="#" >Update</a></td>
-                                <td><a href ="#" >Delete</a></td>
+                                <td><a class="btn btn-sm btn-info" href ="{% url 'updateorder' i.id %}" >Update</a></td>
+                                <td><a class ="btn btn-sm btn-danger" href ="{% url 'deleteorder' i.id %}" >Delete</a></td>
                             </tr>
                         {% endfor %}
                         
