--- a/Django-CRM/accounts/templates/accounts/navbar.html
+++ b/Django-CRM/accounts/templates/accounts/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a href="http://127.0.0.1:8000">
+    <a href="{% url 'home' %}">
     <img id="logo" height="40" width= "100" src= "{% static '/images/logo.jpg'%}" >
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,10 +9,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="http://127.0.0.1:8000/product">products</a>
+          <a class="nav-link" href="{% url 'home' %}">Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="http://127.0.0.1:8000/customer/<str:pk_test>">Customer</a>
+          <a class="nav-link" href="{% url 'product' %}">Product</a>
         </li>
         
       </ul>
