add place order in customer and multiple order system

--- a/Django-CRM/accounts/templates/accounts/createupdate.html
+++ b/Django-CRM/accounts/templates/accounts/createupdate.html
@@ -4,9 +4,13 @@
    <div class="mx-auto" style="margin-top: 50px">
          <form action= "" method= "POST">
              {% csrf_token %}
-            {{form}}
+             {{form.management_form}}
+            {% for f in form %}
+               {{f}}
+               <hr>
+            {% endfor %}
 
-            <input type= "submit" name = "Submit">
+            <input style="margin-left: 20px" class="btn btn-md  btn-outline-info" type= "submit" name = "Submit">
         </form>
    </div>
 {% endblock content %}
