--- a/Django-CRM/accounts/templates/accounts/dashboard.html
+++ b/Django-CRM/accounts/templates/accounts/dashboard.html
@@ -35,7 +35,7 @@
         <div class="col-md-7">
             <i><h4>Last 5 Orders</h4></i>
                 <div class="card card-body">
-                    <a class="btn btn-primary btn-block btn-sm" href="{% url 'createupdate' %}">Create Order</a>
+                    {% comment %} <a class="btn btn-primary btn-block btn-sm" href="{% url 'createupdate' %}">Create Order</a> {% endcomment %}
                     <table class="table table-sm">
                         <tr>
                             <th>Customer</th>
